--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,76 @@
-anyio==4.1.0
-attrs==23.1.0
-boto3==1.34.1
-botocore==1.34.1
-certifi==2023.11.17
+awscli==1.22.34
+blinker==1.4
+botocore==1.23.34
+certifi==2020.6.20
+chardet==4.0.0
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==2.2.1
+colorama==0.4.4
+command-not-found==0.3
 contextlib2==21.6.0
+cryptography==3.4.8
+dbus-python==1.2.18
 dill==0.3.7
-docker==7.0.0
+distro==1.7.0
+distro-info==1.1+ubuntu0.1
+docutils==0.17.1
 exceptiongroup==1.2.0
-fastapi==0.95.2
 filelock==3.13.1
 fsspec==2023.12.2
 google-pasta==0.2.0
 h11==0.14.0
-huggingface-hub==0.19.4
+httplib2==0.20.2
+huggingface-hub==0.20.1
 idna==3.6
 importlib-metadata==6.11.0
-inquirerpy==0.3.4
+jeepney==0.7.1
 jmespath==1.0.1
-jsonschema==4.20.0
-jsonschema-specifications==2023.11.2
-multiprocess==0.70.15
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+more-itertools==8.10.0
+netifaces==0.11.0
 numpy==1.26.2
+oauthlib==3.2.0
+olefile==0.46
 packaging==23.2
-pandas==2.1.4
-pathos==0.3.1
-pfzy==0.3.4
+Pillow==9.0.1
 platformdirs==4.1.0
 pox==0.3.3
 ppft==1.7.6.7
-prompt-toolkit==3.0.43
 protobuf==4.25.1
 psutil==5.9.6
+pyasn1==0.4.8
 pydantic==1.10.13
+Pygments==2.11.2
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyparsing==2.4.7
+python-apt==2.4.0+ubuntu2
 python-dateutil==2.8.2
 pytz==2023.3.post1
+pyupgrade==3.15.0
 PyYAML==6.0.1
-referencing==0.32.0
-requests==2.31.0
+requests==2.25.1
+roman==3.3
 rpds-py==0.13.2
-s3transfer==0.9.0
-sagemaker==2.200.1
-schema==0.7.5
+rsa==4.8
+s3transfer==0.5.0
+SecretStorage==3.3.1
 six==1.16.0
 smdebug-rulesconfig==1.0.1
 sniffio==1.3.0
-starlette==0.27.0
+systemd-python==234
 tblib==1.7.0
+tokenize-rt==5.2.0
 tqdm==4.66.1
 typing_extensions==4.9.0
 tzdata==2023.3
+ubuntu-advantage-tools==8001
+ufw==0.36.1
+unattended-upgrades==0.1
 urllib3==1.26.18
-uvicorn==0.22.0
-wcwidth==0.2.12
+wadllib==1.3.6
 zipp==3.17.0
