--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+anyio==4.2.0
+attrs==23.1.0
 awscli==1.22.34
 blinker==1.4
-botocore==1.23.34
+boto3==1.34.7
+botocore==1.34.7
 certifi==2020.6.20
 chardet==4.0.0
 charset-normalizer==3.3.2
@@ -14,8 +17,10 @@ dbus-python==1.2.18
 dill==0.3.7
 distro==1.7.0
 distro-info==1.1+ubuntu0.1
+docker==7.0.0
 docutils==0.17.1
 exceptiongroup==1.2.0
+fastapi==0.95.2
 filelock==3.13.1
 fsspec==2023.12.2
 google-pasta==0.2.0
@@ -26,16 +31,21 @@ idna==3.6
 importlib-metadata==6.11.0
 jeepney==0.7.1
 jmespath==1.0.1
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
 keyring==23.5.0
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
 more-itertools==8.10.0
+multiprocess==0.70.15
 netifaces==0.11.0
 numpy==1.26.2
 oauthlib==3.2.0
 olefile==0.46
 packaging==23.2
+pandas==2.1.4
+pathos==0.3.1
 Pillow==9.0.1
 platformdirs==4.1.0
 pox==0.3.3
@@ -53,15 +63,19 @@ python-dateutil==2.8.2
 pytz==2023.3.post1
 pyupgrade==3.15.0
 PyYAML==6.0.1
-requests==2.25.1
+referencing==0.32.0
+requests==2.31.0
 roman==3.3
 rpds-py==0.13.2
 rsa==4.8
-s3transfer==0.5.0
+s3transfer==0.10.0
+sagemaker==2.202.1
+schema==0.7.5
 SecretStorage==3.3.1
 six==1.16.0
 smdebug-rulesconfig==1.0.1
 sniffio==1.3.0
+starlette==0.27.0
 systemd-python==234
 tblib==1.7.0
 tokenize-rt==5.2.0
@@ -72,5 +86,6 @@ ubuntu-advantage-tools==8001
 ufw==0.36.1
 unattended-upgrades==0.1
 urllib3==1.26.18
+uvicorn==0.22.0
 wadllib==1.3.6
 zipp==3.17.0
