--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,42 @@
-anyio==4.2.0
-attrs==23.1.0
-awscli==1.22.34
-blinker==1.4
-boto3==1.34.7
-botocore==1.34.7
-certifi==2020.6.20
-chardet==4.0.0
+boto3==1.34.11
+botocore==1.34.11
+certifi==2023.11.17
 charset-normalizer==3.3.2
-click==8.1.7
-cloudpickle==2.2.1
-colorama==0.4.4
-command-not-found==0.3
-contextlib2==21.6.0
-cryptography==3.4.8
-dbus-python==1.2.18
-dill==0.3.7
-distro==1.7.0
-distro-info==1.1+ubuntu0.1
-docker==7.0.0
-docutils==0.17.1
-exceptiongroup==1.2.0
-fastapi==0.95.2
 filelock==3.13.1
 fsspec==2023.12.2
-google-pasta==0.2.0
-h11==0.14.0
-httplib2==0.20.2
 huggingface-hub==0.20.1
 idna==3.6
-importlib-metadata==6.11.0
-jeepney==0.7.1
+Jinja2==3.1.2
 jmespath==1.0.1
-jsonschema==4.20.0
-jsonschema-specifications==2023.11.2
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-more-itertools==8.10.0
-multiprocess==0.70.15
-netifaces==0.11.0
+MarkupSafe==2.1.3
+mpmath==1.3.0
+networkx==3.2.1
 numpy==1.26.2
-oauthlib==3.2.0
-olefile==0.46
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
 packaging==23.2
-pandas==2.1.4
-pathos==0.3.1
-Pillow==9.0.1
-platformdirs==4.1.0
-pox==0.3.3
-ppft==1.7.6.7
-protobuf==4.25.1
-psutil==5.9.6
-pyasn1==0.4.8
-pydantic==1.10.13
-Pygments==2.11.2
-PyGObject==3.42.1
-PyJWT==2.3.0
-pyparsing==2.4.7
-python-apt==2.4.0+ubuntu2
 python-dateutil==2.8.2
-pytz==2023.3.post1
-pyupgrade==3.15.0
 PyYAML==6.0.1
-referencing==0.32.0
+regex==2023.12.25
 requests==2.31.0
-roman==3.3
-rpds-py==0.13.2
-rsa==4.8
 s3transfer==0.10.0
-sagemaker==2.202.1
-schema==0.7.5
-SecretStorage==3.3.1
+safetensors==0.4.1
 six==1.16.0
-smdebug-rulesconfig==1.0.1
-sniffio==1.3.0
-starlette==0.27.0
-systemd-python==234
-tblib==1.7.0
-tokenize-rt==5.2.0
+sympy==1.12
+tokenizers==0.15.0
+torch==2.1.2
 tqdm==4.66.1
+transformers==4.36.2
+triton==2.1.0
 typing_extensions==4.9.0
-tzdata==2023.3
-ubuntu-advantage-tools==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.18
-uvicorn==0.22.0
-wadllib==1.3.6
-zipp==3.17.0
+urllib3==2.0.7
