--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ boto3==1.34.11
 botocore==1.34.11
 certifi==2023.11.17
 charset-normalizer==3.3.2
+diskcache==5.6.3
 filelock==3.13.1
 fsspec==2023.12.2
 huggingface-hub==0.20.1
 idna==3.6
 Jinja2==3.1.2
 jmespath==1.0.1
+llama_cpp_python==0.2.26
 MarkupSafe==2.1.3
 mpmath==1.3.0
 networkx==3.2.1
